feat: wallet info, add funds, added pages