@@ -1,7 +1,6 @@
 package me.darkovrbaski.items.marketplace.exception;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,24 +11,29 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @Slf4j
 @RestControllerAdvice
-public class CustomExceptionHandler extends BaseExceptionHandler {
+public class GlobalExceptionHandler extends BaseExceptionHandler {
 
-  CustomExceptionHandler() {
+  GlobalExceptionHandler() {
     super(log);
 
     registerMapping(EntityNotFoundException.class, HttpStatus.NOT_FOUND);
     registerMapping(EntityAlreadyExistsException.class, HttpStatus.CONFLICT);
+    registerMapping(MethodArgumentNotValidException.class, HttpStatus.BAD_REQUEST);
+    registerMapping(EntityIntegrityViolationException.class, HttpStatus.CONFLICT);
   }
 
   @ExceptionHandler(MethodArgumentNotValidException.class)
   public ResponseEntity<ErrorResponse> handleValidationErrors(
       final MethodArgumentNotValidException ex) {
-    final HttpStatus status = HttpStatus.BAD_REQUEST;
+    final HttpStatus status = getStatusFromException(ex);
     final List<String> errors = ex.getBindingResult().getFieldErrors().stream()
-        .map(FieldError::getDefaultMessage).collect(Collectors.toList());
+        .map(FieldError::getDefaultMessage).toList();
     final String message = "Validation failed";
 
-    log.error("{} : {} ({}) \n\n {}", message, status.name(), status.value(), ex.getMessage(), ex);
+    if (log.isErrorEnabled()) {
+      log.error("{} : {} ({}) \n\n {}", message, status.name(), status.value(), ex.getMessage(),
+          ex);
+    }
 
     return ResponseEntity.status(status).body(new ErrorResponse(status, message, errors));
   }
